--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -32,7 +32,7 @@
             android:fontFamily="sans-serif-medium"
             android:text="@string/order"
             android:textColor="@color/gray_intro_text"
-            android:textSize="20sp"
+            android:textSize="@dimen/text_20sp"
             app:layout_constraintBottom_toBottomOf="@+id/back_arrow"
             app:layout_constraintStart_toEndOf="@+id/back_arrow"
             app:layout_constraintTop_toTopOf="@+id/back_arrow" />
@@ -45,7 +45,7 @@
             android:layout_marginTop="28dp"
             android:text="@string/route"
             android:textColor="@color/gray_intro_text"
-            android:textSize="24sp"
+            android:textSize="@dimen/text_24sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/order_title" />
@@ -69,7 +69,7 @@
             android:layout_marginEnd="@dimen/margin_24dp"
             android:fontFamily="sans-serif"
             android:textColor="@color/withdraws_gray"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_16sp"
             app:layout_constraintBottom_toBottomOf="@+id/circle_image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/circle_image"
@@ -83,7 +83,7 @@
             android:layout_marginTop="8dp"
             android:fontFamily="sans-serif-medium"
             android:textColor="@color/gray_profile"
-            android:textSize="10sp"
+            android:textSize="@dimen/text_10sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/route_tv"
             tools:text="14:20, 19 окт 2019" />
@@ -123,7 +123,7 @@
             android:layout_marginStart="@dimen/margin_16dp"
             android:maxLength="50"
             android:textColor="@color/withdraws_gray"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_16sp"
             app:layout_constraintBottom_toBottomOf="@id/rectangle"
             app:layout_constraintStart_toEndOf="@+id/rectangle"
             app:layout_constraintTop_toTopOf="@+id/rectangle"
@@ -136,7 +136,7 @@
             android:layout_marginStart="@dimen/margin_16dp"
             android:maxLength="50"
             android:textColor="@color/withdraws_gray"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_16sp"
             app:layout_constraintBottom_toBottomOf="@id/polygon"
             app:layout_constraintStart_toEndOf="@+id/polygon"
             app:layout_constraintTop_toTopOf="@+id/polygon"
@@ -150,7 +150,7 @@
             android:layout_marginTop="36dp"
             android:text="@string/received_from_customer"
             android:textColor="@color/withdraws_gray"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/address_to" />
 
@@ -160,7 +160,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="44dp"
             android:textColor="@color/withdraws_gray"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_16sp"
             app:layout_constraintBottom_toBottomOf="@+id/received_from_customer"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/received_from_customer"
@@ -174,7 +174,7 @@
             android:layout_marginTop="18dp"
             android:text="@string/tariff_for_drivers"
             android:textColor="@color/withdraws_gray"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/received_from_customer" />
 
@@ -184,7 +184,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="44dp"
             android:textColor="@color/withdraws_gray"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_16sp"
             app:layout_constraintBottom_toBottomOf="@+id/tariff_for_drivers"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/tariff_for_drivers"
@@ -198,7 +198,7 @@
             android:layout_marginTop="18dp"
             android:text="@string/tip"
             android:textColor="@color/withdraws_gray"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tariff_for_drivers" />
 
@@ -208,7 +208,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="44dp"
             android:textColor="@color/withdraws_gray"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_16sp"
             app:layout_constraintBottom_toBottomOf="@+id/tip_tv"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/tip_tv"
@@ -222,7 +222,7 @@
             android:layout_marginTop="18dp"
             android:text="@string/aggregator_commission"
             android:textColor="@color/withdraws_gray"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tip_tv" />
 
@@ -232,7 +232,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="44dp"
             android:textColor="@color/withdraws_gray"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_16sp"
             app:layout_constraintBottom_toBottomOf="@+id/aggregator_commission"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/aggregator_commission"
@@ -246,7 +246,7 @@
             android:layout_marginTop="18dp"
             android:text="@string/our_commission"
             android:textColor="@color/withdraws_gray"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/aggregator_commission" />
 
@@ -256,7 +256,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="44dp"
             android:textColor="@color/withdraws_gray"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_16sp"
             app:layout_constraintBottom_toBottomOf="@+id/our_commission"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/our_commission"
@@ -270,7 +270,7 @@
             android:layout_marginTop="18dp"
             android:text="@string/total"
             android:textColor="@color/withdraws_gray"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/our_commission" />
 
@@ -280,7 +280,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="44dp"
             android:textColor="@color/withdraws_gray"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_16sp"
             app:layout_constraintBottom_toBottomOf="@+id/total_tv"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/total_tv"
@@ -306,7 +306,7 @@
             android:layout_marginEnd="44dp"
             android:fontFamily="sans-serif-medium"
             android:textColor="@color/withdraws_yellow"
-            android:textSize="20sp"
+            android:textSize="@dimen/text_20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/space"
             tools:text="Итог: 1000.00₽" />
@@ -319,7 +319,7 @@
             android:layout_marginEnd="44dp"
             android:text="@string/with_commission"
             android:textColor="@color/gray_profile"
-            android:textSize="12sp"
+            android:textSize="@dimen/text_12sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/total_sum_tv" />
 
@@ -335,7 +335,7 @@
             android:text="@string/back"
             android:textAllCaps="false"
             android:textColor="@color/white_code_text"
-            android:textSize="20sp"
+            android:textSize="@dimen/text_20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
