--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -62,7 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_64dp"
             android:textColor="@color/registration_white_color"
-            android:textSize="24sp"
+            android:textSize="@dimen/text_24sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -76,7 +76,7 @@
             android:layout_marginTop="@dimen/margin_4dp"
             android:fontFamily="sans-serif-medium"
             android:textColor="@color/gray_intro_text"
-            android:textSize="14sp"
+            android:textSize="@dimen/text_14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/name_tv"
@@ -88,7 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_16dp"
             android:textColor="@color/registration_white_color"
-            android:textSize="30sp"
+            android:textSize="@dimen/text_30sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -120,7 +120,7 @@
             android:paddingEnd="20dp"
             android:text="@string/balance"
             android:textColor="@color/gray_light_profile"
-            android:textSize="20sp"
+            android:textSize="@dimen/text_20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/background" />
@@ -148,7 +148,7 @@
             android:paddingEnd="20dp"
             android:text="@string/orders"
             android:textColor="@color/gray_light_profile"
-            android:textSize="20sp"
+            android:textSize="@dimen/text_20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/balance_view" />
@@ -176,7 +176,7 @@
             android:paddingEnd="20dp"
             android:text="@string/withdrawal_applications"
             android:textColor="@color/gray_light_profile"
-            android:textSize="20sp"
+            android:textSize="@dimen/text_20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/orders_view" />
@@ -204,7 +204,7 @@
             android:paddingEnd="20dp"
             android:text="@string/accounts_and_cards"
             android:textColor="@color/gray_light_profile"
-            android:textSize="20sp"
+            android:textSize="@dimen/text_20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/withdrawal_applications_view" />
@@ -232,7 +232,7 @@
             android:paddingEnd="20dp"
             android:text="@string/support_service"
             android:textColor="@color/gray_light_profile"
-            android:textSize="20sp"
+            android:textSize="@dimen/text_20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/accounts_and_cards_view" />
@@ -259,7 +259,7 @@
             android:paddingEnd="@dimen/margin_8dp"
             android:paddingBottom="4dp"
             android:textColor="@color/continue_color"
-            android:textSize="13sp"
+            android:textSize="@dimen/text_13sp"
             app:layout_constraintBottom_toBottomOf="@+id/support_service_view"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/support_service_view"
@@ -278,7 +278,7 @@
             android:padding="@dimen/margin_8dp"
             android:text="@string/exit"
             android:textColor="@color/gray_profile"
-            android:textSize="20sp"
+            android:textSize="@dimen/text_20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
