--- a/app/src/main/res/layout/fragment_withdraw.xml
+++ b/app/src/main/res/layout/fragment_withdraw.xml
@@ -26,7 +26,7 @@
         android:fontFamily="sans-serif-medium"
         android:text="@string/withdraw_title"
         android:textColor="@color/gray_intro_text"
-        android:textSize="20sp"
+        android:textSize="@dimen/text_20sp"
         app:layout_constraintBottom_toBottomOf="@+id/back_arrow"
         app:layout_constraintStart_toEndOf="@+id/back_arrow"
         app:layout_constraintTop_toTopOf="@+id/back_arrow" />
@@ -48,7 +48,7 @@
         android:layout_marginStart="14dp"
         android:text="@string/yandex_title"
         android:textColor="@color/gray_intro_text"
-        android:textSize="24sp"
+        android:textSize="@dimen/text_24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/taxi_icon"
         app:layout_constraintStart_toEndOf="@+id/taxi_icon"
@@ -72,7 +72,7 @@
         android:layout_marginEnd="@dimen/margin_24dp"
         android:fontFamily="sans-serif"
         android:textColor="@color/withdraws_gray"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_16sp"
         app:layout_constraintBottom_toBottomOf="@+id/circle_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/circle_image"
@@ -86,7 +86,7 @@
         android:layout_marginTop="10dp"
         android:fontFamily="sans-serif-medium"
         android:textColor="@color/gray_profile"
-        android:textSize="10sp"
+        android:textSize="@dimen/text_10sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/taxi_icon"
         tools:text="14:20, 19 ОКТ 2019" />
@@ -112,7 +112,7 @@
         android:fontFamily="sans-serif"
         android:text="ПАО “Сбербанк”"
         android:textColor="@color/withdraws_gray"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_16sp"
         app:layout_constraintStart_toStartOf="@+id/background"
         app:layout_constraintTop_toTopOf="@+id/background" />
 
@@ -124,7 +124,7 @@
         android:layout_marginTop="6dp"
         android:text="Р/с 408190009938888837"
         android:textColor="@color/withdraws_gray"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_16sp"
         app:layout_constraintStart_toStartOf="@+id/background"
         app:layout_constraintTop_toBottomOf="@+id/bank_name_tv" />
 
@@ -137,7 +137,7 @@
         android:fontFamily="sans-serif"
         android:text="Поликин Г. И"
         android:textColor="@color/gray_profile"
-        android:textSize="13sp"
+        android:textSize="@dimen/text_13sp"
         app:layout_constraintStart_toStartOf="@+id/background"
         app:layout_constraintTop_toBottomOf="@+id/order_tv" />
 
@@ -158,7 +158,7 @@
         android:layout_marginTop="@dimen/margin_24dp"
         android:text="@string/withdrawal_title"
         android:textColor="@color/withdraws_gray"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/background" />
 
@@ -169,7 +169,7 @@
         android:layout_marginTop="@dimen/margin_24dp"
         android:layout_marginEnd="36dp"
         android:textColor="@color/withdraws_gray"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/background"
         tools:text="1013.00₽" />
@@ -182,7 +182,7 @@
         android:layout_marginTop="@dimen/margin_24dp"
         android:text="@string/commission_title"
         android:textColor="@color/withdraws_gray"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/withdrawal_tv" />
 
@@ -193,7 +193,7 @@
         android:layout_marginTop="@dimen/margin_24dp"
         android:layout_marginEnd="36dp"
         android:textColor="@color/withdraws_gray"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/withdrawal_amount"
         tools:text="13.00₽" />
@@ -218,7 +218,7 @@
         android:layout_marginEnd="44dp"
         android:fontFamily="sans-serif-medium"
         android:textColor="@color/withdraws_yellow"
-        android:textSize="20sp"
+        android:textSize="@dimen/text_20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/space"
         tools:text="Итог: 1000.00₽" />
@@ -231,7 +231,7 @@
         android:layout_marginEnd="44dp"
         android:text="@string/with_commission"
         android:textColor="@color/gray_profile"
-        android:textSize="12sp"
+        android:textSize="@dimen/text_12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/total_tv" />
 
@@ -247,7 +247,7 @@
         android:text="@string/back"
         android:textAllCaps="false"
         android:textColor="@color/white_code_text"
-        android:textSize="20sp"
+        android:textSize="@dimen/text_20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
