--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/margin_24dp"
         android:textColor="@color/gray_profile"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_16sp"
         app:layout_constraintEnd_toStartOf="@+id/background"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_8dp"
         android:textColor="@color/gray_profile"
-        android:textSize="14sp"
+        android:textSize="@dimen/text_14sp"
         app:layout_constraintBottom_toBottomOf="@+id/circle_image"
         app:layout_constraintStart_toEndOf="@+id/circle_image"
         app:layout_constraintTop_toTopOf="@+id/circle_image"
@@ -99,7 +99,7 @@
         android:layout_marginStart="12dp"
         android:maxLength="30"
         android:textColor="@color/gray_profile"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_16sp"
         app:layout_constraintBottom_toBottomOf="@id/rectangle"
         app:layout_constraintStart_toEndOf="@+id/rectangle"
         app:layout_constraintTop_toTopOf="@+id/rectangle"
@@ -112,7 +112,7 @@
         android:layout_marginStart="12dp"
         android:maxLength="30"
         android:textColor="@color/gray_profile"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_16sp"
         app:layout_constraintBottom_toBottomOf="@id/polygon"
         app:layout_constraintStart_toEndOf="@+id/polygon"
         app:layout_constraintTop_toTopOf="@+id/polygon"
@@ -126,7 +126,7 @@
         android:layout_marginTop="@dimen/margin_16dp"
         android:text="@string/total_with_commission"
         android:textColor="@color/gray_profile"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_16sp"
         app:layout_constraintStart_toStartOf="@id/background"
         app:layout_constraintTop_toBottomOf="@+id/address_to" />
 
@@ -136,7 +136,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/margin_16dp"
         android:textColor="@color/withdraws_yellow"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_16sp"
         app:layout_constraintBottom_toBottomOf="@id/total_tv"
         app:layout_constraintEnd_toEndOf="@id/background"
         app:layout_constraintTop_toTopOf="@+id/total_tv"
