--- a/app/src/main/res/layout/item_sent_message.xml
+++ b/app/src/main/res/layout/item_sent_message.xml
@@ -36,7 +36,7 @@
         android:layout_marginTop="12dp"
         android:text="@string/topic"
         android:textColor="@color/gray_profile"
-        android:textSize="13sp"
+        android:textSize="@dimen/text_13sp"
         app:layout_constraintStart_toStartOf="@+id/background"
         app:layout_constraintTop_toTopOf="@+id/background" />
 
@@ -48,7 +48,7 @@
         android:layout_marginTop="@dimen/margin_4dp"
         android:fontFamily="sans-serif-medium"
         android:textColor="@color/gray_intro_text"
-        android:textSize="20sp"
+        android:textSize="@dimen/text_20sp"
         app:layout_constraintStart_toStartOf="@+id/background"
         app:layout_constraintTop_toBottomOf="@+id/topic_tv"
         tools:text="Проблема с выводом денег" />
@@ -61,7 +61,7 @@
         android:layout_marginTop="@dimen/margin_4dp"
         android:layout_marginEnd="@dimen/margin_16dp"
         android:textColor="@color/withdraws_gray"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_16sp"
         app:layout_constraintEnd_toEndOf="@+id/background"
         app:layout_constraintStart_toStartOf="@+id/background"
         app:layout_constraintTop_toBottomOf="@+id/topic_title"
