--- a/app/src/main/res/layout/item_withdraw_date.xml
+++ b/app/src/main/res/layout/item_withdraw_date.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="@dimen/margin_16dp"
         android:layout_marginBottom="@dimen/margin_16dp"
         android:textColor="@color/gray_intro_text"
-        android:textSize="24sp"
+        android:textSize="@dimen/text_24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
