--- a/app/src/main/res/layout/dialog_one_button.xml
+++ b/app/src/main/res/layout/dialog_one_button.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="@dimen/margin_24dp"
         android:fontFamily="sans-serif-medium"
         android:textColor="@color/mainBackground"
-        android:textSize="20sp"
+        android:textSize="@dimen/text_20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="@string/daily_withdrawal" />
@@ -29,7 +29,7 @@
         android:layout_marginEnd="@dimen/margin_24dp"
         android:fontFamily="sans-serif"
         android:textColor="@color/accounts_dialog_gray"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title"
@@ -45,7 +45,7 @@
         android:padding="24dp"
         android:text="@string/understand"
         android:textColor="@color/withdraws_yellow"
-        android:textSize="14sp"
+        android:textSize="@dimen/text_14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
