--- a/app/src/main/res/layout/fragment_auth_phone.xml
+++ b/app/src/main/res/layout/fragment_auth_phone.xml
@@ -25,7 +25,7 @@
         android:fontFamily="sans-serif-medium"
         android:text="@string/input_phone_number"
         android:textColor="@color/gray_intro_text"
-        android:textSize="20sp"
+        android:textSize="@dimen/text_20sp"
         app:layout_constraintBottom_toTopOf="@+id/phone_edit_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +48,7 @@
         android:textColor="@color/gray_intro_text"
         android:textColorHint="@color/grayText"
         android:textCursorDrawable="@drawable/color_cursor"
-        android:textSize="30sp"
+        android:textSize="@dimen/text_30sp"
         android:textStyle="bold"
         android:theme="@style/CustomTheme"
         app:backgroundTint="@color/grayText"
@@ -83,7 +83,7 @@
         android:text="@string/continue_hint"
         android:textAllCaps="false"
         android:textColor="@color/continue_color"
-        android:textSize="20sp"
+        android:textSize="@dimen/text_20sp"
         app:layout_constraintBottom_toTopOf="@+id/login_checkbox"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -101,7 +101,7 @@
         android:paddingTop="22dp"
         android:text="@string/login_agreement_title"
         android:textColor="@color/agreement_text_color"
-        android:textSize="13sp"
+        android:textSize="@dimen/text_13sp"
         app:layout_constraintBottom_toTopOf="@+id/keyboard"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_button" />
