--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -86,7 +86,7 @@
             android:padding="@dimen/margin_16dp"
             android:text="@string/close"
             android:textColor="@color/withdraws_gray"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/background" />
 
@@ -111,7 +111,7 @@
             android:gravity="center"
             android:text="@string/no_notifications"
             android:textColor="@color/gray_profile"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_16sp"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
