--- a/app/src/main/res/layout/fragment_orders_list.xml
+++ b/app/src/main/res/layout/fragment_orders_list.xml
@@ -34,7 +34,7 @@
         android:gravity="center"
         android:text="@string/info_unavailable"
         android:textColor="@color/gray_profile"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_16sp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
