--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -29,7 +29,7 @@
             android:layout_marginTop="98dp"
             android:text="@string/registration"
             android:textColor="@color/gray_intro_text"
-            android:textSize="24sp"
+            android:textSize="@dimen/text_24sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
             android:gravity="center"
             android:text="@string/select_registration_variant"
             android:textColor="@color/gray_profile"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/registration_tv" />
@@ -59,7 +59,7 @@
             android:text="@string/set_phone_number"
             android:textAllCaps="false"
             android:textColor="@color/continue_color"
-            android:textSize="20sp"
+            android:textSize="@dimen/text_20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/registration_variants_tv" />
@@ -72,7 +72,7 @@
             android:fontFamily="sans-serif"
             android:text="@string/or"
             android:textColor="@color/agreement_text_color"
-            android:textSize="13sp"
+            android:textSize="@dimen/text_13sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/set_phone_number_button" />
@@ -87,7 +87,7 @@
             android:text="@string/download_documents"
             android:textAllCaps="false"
             android:textColor="@color/continue_color"
-            android:textSize="20sp"
+            android:textSize="@dimen/text_20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/or_tv" />
@@ -101,7 +101,7 @@
             android:gravity="center"
             android:text="@string/prepare_this_documents"
             android:textColor="@color/gray_intro_text"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/download_documents_button" />
@@ -113,7 +113,7 @@
             android:fontFamily="sans-serif"
             android:text="@string/documents_list"
             android:textColor="@color/gray_profile"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_16sp"
             app:layout_constraintStart_toStartOf="@+id/prepare_this_documents"
             app:layout_constraintTop_toBottomOf="@+id/prepare_this_documents" />
 
