--- a/app/src/main/res/layout/fragment_write_message.xml
+++ b/app/src/main/res/layout/fragment_write_message.xml
@@ -26,7 +26,7 @@
         android:fontFamily="sans-serif-medium"
         android:text="@string/write_to_us"
         android:textColor="@color/balance_fuel_gray"
-        android:textSize="20sp"
+        android:textSize="@dimen/text_20sp"
         app:layout_constraintBottom_toBottomOf="@+id/back_arrow"
         app:layout_constraintStart_toEndOf="@+id/back_arrow"
         app:layout_constraintTop_toTopOf="@+id/back_arrow" />
@@ -39,7 +39,7 @@
         android:layout_marginTop="28dp"
         android:text="@string/write_message_title"
         android:textColor="@color/gray_profile"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/write_to_us_title" />
 
@@ -55,7 +55,7 @@
         android:inputType="textMultiLine"
         android:maxLength="200"
         android:textColor="@color/gray_intro_text"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/write_message_title"
@@ -68,7 +68,7 @@
         android:layout_marginEnd="@dimen/margin_24dp"
         android:text="@string/symbols_max_text"
         android:textColor="@color/gray_profile"
-        android:textSize="14sp"
+        android:textSize="@dimen/text_14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/message_edit_text" />
 
@@ -84,7 +84,7 @@
         android:text="@string/submit"
         android:textAllCaps="false"
         android:textColor="@color/continue_color"
-        android:textSize="20sp"
+        android:textSize="@dimen/text_20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
