--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_4dp"
         android:textColor="@color/withdraws_gray"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_16sp"
         app:layout_constraintStart_toStartOf="@+id/status_image"
         app:layout_constraintTop_toBottomOf="@+id/push_title"
         tools:text="С 16 октября водителям для доступа в сервис нужен будет рейтинг не менее 4,5" />
@@ -65,7 +65,7 @@
         android:layout_marginBottom="@dimen/margin_8dp"
         android:fontFamily="sans-serif-medium"
         android:textColor="@color/gray_profile"
-        android:textSize="10sp"
+        android:textSize="@dimen/text_10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/push_message"
         app:layout_constraintTop_toBottomOf="@+id/push_message"
