--- a/app/src/main/res/layout/item_taxi.xml
+++ b/app/src/main/res/layout/item_taxi.xml
@@ -23,7 +23,7 @@
         android:layout_marginTop="12dp"
         android:fontFamily="sans-serif-medium"
         android:textColor="@color/gray_intro_text"
-        android:textSize="18sp"
+        android:textSize="@dimen/text_18sp"
         app:layout_constraintBottom_toTopOf="@+id/taxi_name"
         app:layout_constraintStart_toEndOf="@+id/taxi_icon"
         app:layout_constraintTop_toTopOf="parent"
@@ -49,7 +49,7 @@
         android:layout_marginEnd="@dimen/margin_16dp"
         android:layout_marginBottom="12dp"
         android:textColor="@color/gray_profile"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/taxi_icon"
