--- a/app/src/main/res/layout/item_taxi_orders.xml
+++ b/app/src/main/res/layout/item_taxi_orders.xml
@@ -26,7 +26,7 @@
         android:layout_marginEnd="@dimen/margin_16dp"
         android:fontFamily="sans-serif-medium"
         android:textColor="@color/gray_intro_text"
-        android:textSize="20sp"
+        android:textSize="@dimen/text_20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/taxi_icon"
