--- a/app/src/main/res/layout/item_withdraw.xml
+++ b/app/src/main/res/layout/item_withdraw.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="28dp"
         android:textColor="@color/gray_profile"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_16sp"
         app:layout_constraintEnd_toStartOf="@+id/background"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -49,7 +49,7 @@
         android:fontFamily="sans-serif-medium"
         android:text="@string/yandex_title"
         android:textColor="@color/withdraws_gray"
-        android:textSize="18sp"
+        android:textSize="@dimen/text_18sp"
         app:layout_constraintBottom_toBottomOf="@+id/taxi_icon"
         app:layout_constraintStart_toEndOf="@+id/taxi_icon"
         app:layout_constraintTop_toTopOf="@+id/taxi_icon" />
@@ -60,7 +60,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:textColor="@color/withdraws_yellow"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_16sp"
         app:layout_constraintBottom_toBottomOf="@+id/taxi_name"
         app:layout_constraintEnd_toStartOf="@+id/chevron_image"
         app:layout_constraintTop_toTopOf="@+id/taxi_name"
@@ -92,7 +92,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:textColor="@color/gray_profile"
-        android:textSize="14sp"
+        android:textSize="@dimen/text_14sp"
         app:layout_constraintBottom_toBottomOf="@+id/circle_image"
         app:layout_constraintStart_toEndOf="@+id/circle_image"
         app:layout_constraintTop_toTopOf="@+id/circle_image"
@@ -104,7 +104,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="38dp"
         android:textColor="@color/gray_profile"
-        android:textSize="14sp"
+        android:textSize="@dimen/text_14sp"
         app:layout_constraintBottom_toBottomOf="@+id/status_tv"
         app:layout_constraintEnd_toEndOf="@+id/background"
         app:layout_constraintTop_toTopOf="@+id/status_tv"
